changed font, updated res, added icons

--- a/about.qmd
+++ b/about.qmd
@@ -1,5 +1,5 @@
 ---
-title: "About"
+title: "About Me"
 ---
 
 <h4>A bit more about who I am, what I do, where I've been, and where I'm headed</h4>
@@ -61,5 +61,5 @@ Map made using package leaflet and data from: <https://simplemaps.com/data/us-ci
 
 <h4>What's Next for Me?</h4>
 
-I am looking to start my career as an environmental data scientist! Broadly, I hope to find a role where I can blend my creative and quantitative talents to contribute to an organization or research group focused on natural resource management. I am ideally looking for jobs in Seattle, Santa Barbara, or remote opportunities.
+I am looking to start my career as an environmental data scientist! Broadly, I hope to find a role where I can bring technical solutions to environmental challenges and contribute to an organization focused on natural resource management or sustainable food production. I am ideally looking for jobs in Santa Barbara, San Diego, or remote opportunities.
 :::
