--- a/posts/2022-12-02-hawaiian-fish-analysis/index.qmd
+++ b/posts/2022-12-02-hawaiian-fish-analysis/index.qmd
@@ -14,6 +14,11 @@ image: dive_mask.JPG
 format: 
   html:
     code-fold: true
+    code-copy: true
+    code-summary: "Show the code"
+    code-line-numbers: true
+    code-tools: true
+    code-block-border-left: true
 toc: true
 draft: false
 ---
